--- a/parts/menu.jade
+++ b/parts/menu.jade
@@ -3,9 +3,7 @@
 		.menu-item About
 	a(href="/services")
 		.menu-item Services
-	a(href="#")
+	a(href="/portfolio")
 		.menu-item Portfolio
-	a(href="#")
-		.menu-item Team
 	a(href="/contact-us")
 		.menu-item Contact Us
