--- a/services/index.jade
+++ b/services/index.jade
@@ -51,52 +51,52 @@ html(lang="en")
 								img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
 								p Development of the Project
 							.slide-right
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Onsite Developer/Team
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Working Space/Equipment for team members
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name PM
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name QA
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Developer/Team engage ONLY with your project
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name PM methodology
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Instant feedback
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Cardidates interview
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Client’s engagement in the project
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Estimates
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Support
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Charges
 							.option-value Monthly Payment
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Quality
 							.option-checkbox.checked
-						.slide-option.button
+						.slide-option.button(data-tappable="true")
 							a(href="/services/outsource")
 								button(role="button") Get more info
-						.slide-option.footer
+						.slide-option.footer(data-tappable="true")
 							a(href="#") Get Started Now
 					.slide
 						.slide-header-container
@@ -105,52 +105,52 @@ html(lang="en")
 								img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
 								p Dedicated Development Team
 							.slide-right
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Onsite Developer/Team
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Working Space/Equipment for team members
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name PM
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name QA
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Developer/Team engage ONLY with your project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name PM methodology
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Instant feedback
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Cardidates interview
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Client’s engagement in the project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Estimates
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Support
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Charges
 							.option-value Monthly Rates
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Quality
 							.option-checkbox.checked
-						.slide-option.button
+						.slide-option.button(data-tappable="true")
 							a(href="/services/outstaff")
 								button(role="button") Get more info
-						.slide-option.footer
+						.slide-option.footer(data-tappable="true")
 							a(href="#") Get Started Now
 					.slide
 						.slide-header-container
@@ -159,52 +159,52 @@ html(lang="en")
 								img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
 								p Developer for relocation
 							.slide-right
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Onsite Developer/Team
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Working Space/Equipment for team members
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name PM
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name QA
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Developer/Team engage ONLY with your project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Fast Start of the Project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name PM methodology
 							.option-value On Demand
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Instant feedback
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Cardidates interview
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Client’s engagement in the project
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Estimates
 							.option-checkbox.checked
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Support
 							.option-checkbox
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Charges
 							.option-value %
-						.slide-option
+						.slide-option(data-tappable="true")
 							.option-name Quality
 							.option-checkbox.checked
-						.slide-option.button
+						.slide-option.button(data-tappable="true")
 							a(href="/services/relocation")
 								button(role="button") Get more info
-						.slide-option.footer
+						.slide-option.footer(data-tappable="true")
 							a(href="#") Get Started Now
 
 		section#service-description
