--- a/styl/general.styl
+++ b/styl/general.styl
@@ -158,6 +158,20 @@ body
 			&:hover
 				color: #ffffff
 
+.tags
+	display: flex
+	flex-wrap: wrap
+	justify-content: center
+	.tag
+		font-size: 13px
+		color: #8092ba
+		font-weight: 400
+		margin: .3rem
+		padding: .5rem 1rem
+		border-radius: 15px
+		background-color: #f3f8ff
+		border: solid 1px #e3eaf3
+
 header
 	position: absolute
 	width: 100%
@@ -241,28 +255,79 @@ header
 				height: 41px
 				background-image: url('/images/svg/logo/big/text-logo.svg')
 				background-repeat: no-repeat
-				
-#toggle-navbar
-		background-color: transparent
-		border: none
-		position: fixed
-		z-index: 2
-		top: 1.6rem
-		right: 1rem
-		height: 1.4rem
+
+#switcher
+	margin: 0 1rem
+	border-bottom: 1px solid #e4e4f1
+	display: flex
+	justify-content: space-between
+	align-items: center
+	#switch-left, #switch-right
+		height: 2rem
 		width: 2rem
-		cursor: pointer
-		display: flex
-		flex-direction: column
-		justify-content: space-between
-		.icon-bar
-			height: 4px
-			width: 100%
-			border-radius: 2px
-			background-color: white
-			transition: transform .3s ease
-		@media screen and (min-width: $screenSmall)
+		background: black
+	h2
+		width: auto
+		font-size: 13px
+		letter-spacing: 0.3px
+		text-transform: uppercase
+		position: relative
+		font-weight: 400
+	a
+		display: none
+		&.active
+			display: block
+			h2
+				&:after
+					content: ''
+					width: 11rem
+					height: 2px
+					background-color: #8492af
+					position: absolute
+					left: 0
+					right: 0
+					bottom: -12px
+					margin: auto
+	@media screen and (min-width: $screenSmall)
+		justify-content: center
+		width: 722px
+		margin: auto
+		a
+			display: block
+			h2
+				margin: 1rem 0
+				cursor: pointer
+				padding-left: 1rem
+				padding-right: 1rem
+			&.active
+				h2:after
+					width: 100%
+					bottom: -17px
+		#switch-left, #switch-right
 			display: none
+
+		
+#toggle-navbar
+	background-color: transparent
+	border: none
+	position: fixed
+	z-index: 2
+	top: 1.6rem
+	right: 1rem
+	height: 1.4rem
+	width: 2rem
+	cursor: pointer
+	display: flex
+	flex-direction: column
+	justify-content: space-between
+	.icon-bar
+		height: 4px
+		width: 100%
+		border-radius: 2px
+		background-color: white
+		transition: transform .3s ease
+	@media screen and (min-width: $screenSmall)
+		display: none
 	
 .menu-list
 	.menu-item
