--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -42,6 +42,8 @@
 					margin-bottom: 1rem
 				textarea
 					resize: none
+				button
+					z-index: 0
 		.contact-info
 			padding: 3rem 1rem
 			background-color: #0e1a35
