--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -38,6 +38,7 @@
 				display: flex
 				flex-direction: column
 			.overlay
+				visibility: hidden
 				opacity: 0
 				transition: opacity .3s ease
 				background-color: #102640
@@ -48,6 +49,7 @@
 				font-weight: 400
 				color: white
 			.description
+				visibility: hidden
 				opacity: 0
 				transition: opacity .3s ease
 				font-size: 14px
@@ -59,17 +61,20 @@
 			a
 				text-align: center
 				.details-button
+					visibility: hidden
 					opacity: 0
 					transition: opacity .3s ease
 					bottom: 2rem
 					width: 10rem
 					margin: auto
 					border: solid 2px #8492af
-			&:hover, &:focus
+			&:hover, &:focus, &:active
 				.overlay
 					opacity: .5
+					visibility: visible
 				.description, .details-button
 					opacity: 1
+					visibility: visible
 		@media screen and (min-width: $screenSmall)
 			margin-top: 1rem
 			.container
@@ -81,6 +86,20 @@
 		@media screen and (min-width: $screenMedium)
 			.project
 				width: 33.33%
+				
+	#result
+		padding: 2rem 0 4rem 0
+		background-color: #f3f8ff
+		border: solid 1px #e3eaf3
+		text-align: center
+		h2
+			width: 90%
+			padding-bottom: 1rem
+			margin: auto
+		@media screen and (min-width: $screenSmall)
+			h2
+				padding-bottom: 2rem
+				width: 35rem
 
 #portfolio-page, #portfolio-project-page			
 	h2.type
