WIP Build scripts

--- a/styl/index.styl
+++ b/styl/index.styl
@@ -1,4 +1,5 @@
 @import 'variables'
+@import 'bower_components/swipeshow/jquery.swipeshow.css'
 @import 'general'
 @import 'services'
 @import 'contact-us'
