--- a/contact-us/index.jade
+++ b/contact-us/index.jade
@@ -39,6 +39,5 @@ html(lang="en")
 				a(href="/services") Go to our Services
 
 		include ../parts/footer
-		include ../parts/scripts
-		script(type="text/javascript" src="/js/contact-us.js")
+		script(type="text/javascript" src="/js/contact-us.min.js")
 
