--- a/portfolio/travel/index.jade
+++ b/portfolio/travel/index.jade
@@ -51,6 +51,6 @@ html(lang="en")
 				button(role="button") Back to all projects
 
 		include ../../parts/footer
-		include ../../parts/scripts
-		script(type="text/javascript" src="/js/portfolio.js")
+		script(type="text/javascript" src="/js/libs.min.js")
+		script(type="text/javascript" src="/js/portfolio.min.js")
 
