--- a/services/index.jade
+++ b/services/index.jade
@@ -212,6 +212,6 @@ html(lang="en")
 				p Feel free to take a look at the compatibility table and understand differences and similarities of each one of them. We also consider mixing the models of cooperation. Everything depends on your project, needs and requirements. One thing we definitely guarantee for all options is QUALITY! We hope you find the best option for you! 
 
 		include ../parts/footer
-		include ../parts/scripts
-		script(type="text/javascript" src="/js/services.js")
+		script(type="text/javascript" src="/js/libs.min.js")
+		script(type="text/javascript" src="/js/services.min.js")
 
