--- a/index.jade
+++ b/index.jade
@@ -80,5 +80,5 @@ html(lang="en")
 				h2.sub-title Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam. 
 
 		include parts/footer
-		include parts/scripts
+		script(type="text/javascript" src="/js/index.min.js")
 
