--- a/index.jade
+++ b/index.jade
@@ -46,7 +46,7 @@ html(lang="en")
 		section#about-services.flex.align-ver-center
 			.container
 				| If you don’t know what to choose, learn more about each of this options and its difference 
-				a(href="#") here
+				a(href="/services") here
 				| .
 		section#guarantee.flex.align-ver-center
 			.container
@@ -54,22 +54,22 @@ html(lang="en")
 				h2.sub-title Now you can give secure access to you’re community from anywhere at anytime. Your future visitor will receive a unique Sequr pin to access your community. You can specify if you want it to be send via text-message or email.
 				.features-container
 					.feature
-						img(src="/images/svg/1-quality.svg" width="68" height="76")
+						include icons/1-quality
 						span Quality is first of all
 					.feature
-						img(src="/images/svg/2-english.svg" width="68" height="76")
+						include icons/2-english
 						span Specialist with good English
 					.feature
-						img(src="/images/svg/3-office.svg" width="68" height="76")
+						include icons/3-office
 						span Our office availabity for 24/7
 					.feature
-						img(src="/images/svg/4-meeting.svg" width="68" height="76")
+						include icons/4-meeting
 						span Personal meetings and direct comunication
 					.feature
-						img(src="/images/svg/5-seniors.svg" width="68" height="76")
+						include icons/5-seniors
 						span Seniors for seniors
 					.feature
-						img(src="/images/svg/6-risk.svg" width="68" height="76")
+						include icons/6-risk
 						span Risk free cooperation
 
 		.gradient
