--- a/portfolio/index.jade
+++ b/portfolio/index.jade
@@ -32,8 +32,11 @@ html(lang="en")
 							.name Travel Application
 						.project-footer
 							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a(href="/portfolio/travel")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio/travel")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 				.project.sport
 					.overlay
 					.project-content
@@ -42,8 +45,11 @@ html(lang="en")
 							.name Sport Application
 						.project-footer
 							.description A real-time web application for visualization different sport events.
-							a(href="/portfolio")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 				.project.yow
 					.overlay
 					.project-content
@@ -52,8 +58,11 @@ html(lang="en")
 							.name YOW
 						.project-footer
 							.description Yow application description would be here in the nearest future
-							a(href="/portfolio")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 				.project
 					.overlay
 					.project-content
@@ -62,8 +71,11 @@ html(lang="en")
 							.name Travel Application
 						.project-footer
 							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a(href="/portfolio")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 				.project
 					.overlay
 					.project-content
@@ -72,8 +84,11 @@ html(lang="en")
 							.name Travel Application
 						.project-footer
 							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a(href="/portfolio")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 				.project
 					.overlay
 					.project-content
@@ -82,8 +97,11 @@ html(lang="en")
 							.name Travel Application
 						.project-footer
 							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a(href="/portfolio")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 				.project
 					.overlay
 					.project-content
@@ -92,15 +110,21 @@ html(lang="en")
 							.name Travel Application
 						.project-footer
 							.description Travel system which introduces the new level of the travel experience. Gives a possibility to plan your trip, book the flight and hotel tickets, assist the customer during the vacation. It includes the innovative way to manage the user purchases and preferences, provides the new way of data input - NLP (Natural Language Processing)
-							a(href="/portfolio")
-								button.details-button(type="button") Details
+							a.details-link(href="/portfolio")
+								button.details-button(type="button")
+									span Details
+									span.icon
+										include ../icons/arrow-go
 
 		section#result
 			h1.title.dark Result
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
 			a(href="/contact-us")
-				button(role="button") Share your requirements
+				button(role="button")
+					span Share your requirements
+					span.icon
+						include ../icons/arrow-go
 
 		include ../parts/footer
 
