--- a/services/outsource/index.jade
+++ b/services/outsource/index.jade
@@ -27,7 +27,10 @@ html(lang="en")
 				h2.sub-title.result You do 5%, we do rest 95% for you. 
 
 				a(href="/services")
-					button(role="button") Services comparison
+					button(role="button")
+						span Services comparison
+						span.icon
+							include ../../icons/arrow-go
 
 		section#workflow.mobile
 			.container
@@ -95,7 +98,10 @@ html(lang="en")
 			h2.sub-title You get well-qualified team member, clean and robust code and successfully implemented product
 
 			a(href="/contact-us")
-				button(role="button") Share your requirements
+				button(role="button")
+					span Share your requirements
+					span.icon
+						include ../../icons/arrow-go
 
 		include ../../parts/footer
 
