--- a/styl/services.styl
+++ b/styl/services.styl
@@ -51,8 +51,14 @@
 				border-radius: 4px
 				border: solid 2px #778ab4
 				transition: border-color .3s ease
+				svg
+					width: 19px
+					height: 16px
 				&:hover
 					border: solid 2px #576076
+			.slide-left
+				svg
+					transform: rotate(180deg)
 			.slide-header
 				display: flex
 				flex-direction: column
