--- a/services/index.jade
+++ b/services/index.jade
@@ -46,11 +46,13 @@ html(lang="en")
 				.slides
 					.slide
 						.slide-header-container
-							.slide-left
+							.slide-left.flex.align-hor-center.align-ver-center
+								include ../icons/arrow-go
 							.slide-header
 								img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
 								p Development of the Project
-							.slide-right
+							.slide-right.flex.align-hor-center.align-ver-center
+								include ../icons/arrow-go
 						.slide-option(data-tappable="true")
 							.option-name Onsite Developer/Team
 							.option-checkbox
@@ -100,11 +102,13 @@ html(lang="en")
 							a(href="#") Get Started Now
 					.slide
 						.slide-header-container
-							.slide-left
+							.slide-left.flex.align-hor-center.align-ver-center
+								include ../icons/arrow-go
 							.slide-header
 								img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
 								p Dedicated Development Team
-							.slide-right
+							.slide-right.flex.align-hor-center.align-ver-center
+								include ../icons/arrow-go
 						.slide-option(data-tappable="true")
 							.option-name Onsite Developer/Team
 							.option-checkbox
@@ -154,11 +158,13 @@ html(lang="en")
 							a(href="#") Get Started Now
 					.slide
 						.slide-header-container
-							.slide-left
+							.slide-left.flex.align-hor-center.align-ver-center
+								include ../icons/arrow-go
 							.slide-header
 								img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
 								p Developer for relocation
-							.slide-right
+							.slide-right.flex.align-hor-center.align-ver-center
+								include ../icons/arrow-go
 						.slide-option(data-tappable="true")
 							.option-name Onsite Developer/Team
 							.option-checkbox.checked
