--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -113,9 +113,9 @@
 		display: flex
 		flex-direction: column
 		justify-content: center
+		text-align: center
 		button
-			width: 15rem
-			margin: auto
+			margin-top: 1rem
 		@media screen and (min-width: $screenMedium)
 			padding: 1rem 0 4rem 0
 			h1.title
