--- a/styl/index.styl
+++ b/styl/index.styl
@@ -136,7 +136,7 @@
 				display: flex
 				align-items: center
 				justify-content: flex-start
-				img
+				svg
 					min-width: 68px
 					min-height: 76px
 					margin-right: 1rem
